--- a/src/components/Project/styles.scss
+++ b/src/components/Project/styles.scss
@@ -8,11 +8,14 @@
       .slider-wrapper {
         .slider {
           .slide {
+            background-color: white !important;
+
             .projectImage {
               width: 100%;
               height: 100%;
               border-radius: 20px !important;
               background-color: white !important;
+              border: 1px solid #e5e5ea;
             }
           }
         }
