--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -3,11 +3,18 @@
   border: 1px solid #dadfe1;
   width: 250px;
 
+  background-color: white;
+
+  border-radius: 10px;
+  box-shadow: 0 4px 10px 0 rgba(218, 225, 233, 0.5);
+
   .headerInfo {
+    background-color: white;
+
     .containerAvatar {
       width: 150px;
       height: 150px;
-      border: 1px solid black;
+      border: 1px solid #dadfe1;
       border-radius: 50%;
 
       .avatar {
@@ -15,9 +22,16 @@
         height: 100%;
         position: relative;
         border-radius: 50%;
+        padding: 5px;
       }
     }
 
-    .info {}
+    .info {
+      .text-profile {
+        font-weight: bold;
+        font-size: 17px;
+        text-align: center;
+      }
+    }
   }
 }
