--- a/src/components/Project/styles.scss
+++ b/src/components/Project/styles.scss
@@ -3,6 +3,11 @@
   padding: 20px;
   border: 1px solid #dadfe1;
 
+  background-color: white;
+
+  border-radius: 10px;
+  box-shadow: 0 4px 10px 0 rgba(218, 225, 233, 0.5);
+
   .containerCarousel {
     .carousel {
       .slider-wrapper {
@@ -19,9 +24,7 @@
             }
           }
         }
-
       }
     }
-
   }
 }
