--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -8,6 +8,9 @@
   border-radius: 10px;
   box-shadow: 0 4px 10px 0 rgba(218, 225, 233, 0.5);
 
+  position: sticky;
+  top: 1.5rem;
+
   .headerInfo {
     background-color: white;
 
